bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:2: error: value and is not a member of Boolean
  if ( (talking==true and hour<7) || (talking==true and hour>20) )
                      ^ParotTrouble:2: error: value and is not a member of Boolean
  if ( (talking==true and hour<7) || (talking==true and hour>20) )
                                                    ^