bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if ( (talking==true and hour<7) || (talking==true and hour>20) )
  	return true
  else
  	return false
  }